# mds_proxy_win

./: CMakeLists.txt
cmake/: FindExtLib.cmake  FindWs32.cmake  Utils.cmake  mdspxy_api-config.cmake
ext/include/mds_api/: CHANGELOG.md  README.md  UpdateGuide.md  mds_api.h  mds_async_api.h
ext/include/mds_global/: mds_mkt_packets.h  mds_qry_packets.h
ext/include/oes_global/: oes_base_constants.h  oes_base_model.h  oes_base_model_credit.h  oes_base_model_option.h
ext/include/sutil/net/: spk_general_client_define.h
ext/lib/: mds_api.lib
include/mdspxy_api/: mdspxy.h
src/: CMakeLists.txt  data.c  data.h  encode.c  encode.h  file.c  fsub.c  list.h  read_v1.c  sub.c  utils.c  utils.h
tests/: CMakeLists.txt  read_file.c  read_file_sync.c  read_fsub.c  read_sub.c
